--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/SeasonDrivers.razor
@@ -28,12 +28,12 @@
                     <NumberDisplay Colour="@context.Item.Colour" Accent="@context.Item.Accent">@context.Item.Number</NumberDisplay>
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e!.Skill" CellClass="font-caption" />
-            <PropertyColumn Property="e => e!.Reliability" Title="REL" CellClass="font-caption" />
-            <PropertyColumn Property="e => e!.Attack" Title="ATT" CellClass="font-caption" />
-            <PropertyColumn Property="e => e!.Defense" Title="DEF" CellClass="font-caption" />
-            <PropertyColumn Property="e => e!.Role" Title="Role" />
-            <PropertyColumn Property="e => e!.Team" />
+            <PropertyColumn Property="e => e.Skill" CellClass="font-caption" />
+            <PropertyColumn Property="e => e.Reliability" Title="REL" CellClass="font-caption" />
+            <PropertyColumn Property="e => e.Attack" Title="ATT" CellClass="font-caption" />
+            <PropertyColumn Property="e => e.Defense" Title="DEF" CellClass="font-caption" />
+            <PropertyColumn Property="e => e.Role" Title="Role" />
+            <PropertyColumn Property="e => e.Team" />
             <TemplateColumn T="SeasonDriverList" Sortable="false">
                 <CellTemplate>
                     <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateItem(context.Item.SeasonDriver))" />
