--- a/SimTECH/SimTECH/Pages/Tyres/Dialogs/TyreEditor.razor
+++ b/SimTECH/SimTECH/Pages/Tyres/Dialogs/TyreEditor.razor
@@ -5,11 +5,12 @@
         <MudText Typo="Typo.h5">Tyre editor</MudText>
     </TitleContent>
     <DialogContent>
-        <MudTextField T="string" @bind-Value="@model.Name" Label="Name" Class="field-md" />
-        <MudColorPicker @bind-Text="@model.Colour" Label="Colour" Placeholder="Select colour pls" Class="field-md" />
+        <MudTextField T="string" @bind-Value="model.Name" Label="Name" Class="field-md" />
+        <MudColorPicker @bind-Text="model.Colour" Label="Colour" Placeholder="Select colour pls" Class="field-md" />
 
-        <MudNumericField T="int" @bind-Value="@model.LifeBonus" Label="Life Bonus" Class="field-md" />
-        <MudNumericField T="int" @bind-Value="@model.PitWhenBelow" Label="Pit when life is below" Class="field-md" />
+        <MudNumericField T="int" @bind-Value="model.LifeBonus" Label="Life Bonus" Class="field-md" />
+        <MudNumericField T="int" @bind-Value="model.MinimumLife" Label="Minimum life" Class="field-md" />
+        <MudNumericField T="int" @bind-Value="model.PitWhenBelow" Label="Pit when life is below" Class="field-md" />
 
         <MudStack Row="true" Justify="Justify.FlexStart" Spacing="4">
             <MudNumericField T="int" @bind-Value="model.WearMin" Min="0" Label="Minimum wear" Class="field-sm" />
