--- a/SimTECH/SimTECH/Pages/Climates/Index.razor
+++ b/SimTECH/SimTECH/Pages/Climates/Index.razor
@@ -11,20 +11,40 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Climates</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Filled.Add" OnClick="AddItem" Class="btn-sm">
+            <MudButton Variant="Variant.Outlined"
+                       Color="Color.Secondary"
+                       Size="Size.Small"
+                       OnClick="GetRandomClimate">
+                Random
+            </MudButton>
+            @if (randomClimate != null)
+            {
+                <CustomIcon Icon="@randomClimate.Icon" Colour="@randomClimate.Colour">
+                    <MudText>@randomClimate.Terminology</MudText>
+                </CustomIcon>
+            }
+            <MudSpacer />
+            <MudButton Variant="Variant.Outlined"
+                       Color="Color.Tertiary"
+                       Size="Size.Small"
+                       StartIcon="@Icons.Material.Filled.Add"
+                       IconSize="Size.Small"
+                       OnClick="AddItem">
                 New
             </MudButton>
         </MudStack>
-        <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4 pb-2">RNG modifier subtracts from the minimum RNG and and adds to maximum RNG</MudText>
+        <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4 pb-2">
+            RNG modifier subtracts from the minimum RNG and and adds to maximum RNG
+        </MudText>
     </MudPaper>
-    <MudDataGrid T="Climate" Items="@climateItems" RowsPerPage="15" Dense="true" Class="overflow-hidden">
+    <MudDataGrid T="Climate" Items="@ClimateItems" RowsPerPage="15" Dense="true" Class="overflow-hidden">
         <Columns>
             <TemplateColumn T="Climate" Title="Icon" Sortable="false">
                 <CellTemplate>
                     <CustomIcon Icon="@context.Item.Icon" Colour="@context.Item.Colour" />
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e!.Terminology" />
+            <PropertyColumn Property="e => e.Terminology" />
             <PropertyColumn Property="e => e!.IsWet" Title="For wet" />
             <PropertyColumn Property="e => e!.EngineMultiplier" Title="Engine" HeaderClass="hide-sort-icons" />
             <PropertyColumn Property="e => e!.ReliablityModifier" Title="REL" HeaderClass="hide-sort-icons" />
@@ -46,22 +66,11 @@
             <MudDataGridPager T="Climate" />
         </PagerContent>
     </MudDataGrid>
-    <MudPaper Elevation="25" Class="mt-4 pa-2">
-        <MudStack Row="true" AlignItems="AlignItems.Center">
-            <MudButton Color="Color.Secondary" Variant="Variant.Outlined" OnClick="GetRandomClimate">RandomClimate</MudButton>
-            @if (randomClimate != null)
-            {
-                <CustomIcon Icon="@randomClimate.Icon" Colour="@randomClimate.Colour">
-                    <MudText>@randomClimate.Terminology</MudText>
-                </CustomIcon>
-            }
-        </MudStack>
-    </MudPaper>
 </MudContainer>
 
 @code {
-    List<Climate> climateItems;
-    Climate? randomClimate = null;
+    private List<Climate> ClimateItems { get; set; } = new();
+    private Climate? randomClimate = null;
 
     protected override async Task OnInitializedAsync()
     {
@@ -71,12 +80,12 @@
             new BreadcrumbItem("Climates", href: "climates", disabled: true),
         });
 
-        climateItems = await _climateService.GetClimates(StateFilter.All);
+        ClimateItems = await _climateService.GetClimates(StateFilter.All);
     }
 
     private void GetRandomClimate()
     {
-        randomClimate = climateItems.TakeRandomClimate();
+        randomClimate = ClimateItems.TakeRandomClimate();
     }
 
     async Task AddItem() => await UpdateItem(null);
@@ -93,7 +102,7 @@
         if (!result.Canceled && result.Data != null && result.Data is Climate updatedItem)
         {
             await _climateService.UpdateClimate(updatedItem);
-            climateItems = await _climateService.GetClimates(StateFilter.All);
+            ClimateItems = await _climateService.GetClimates(StateFilter.All);
         }
     }
 
