--- a/SimTECH/SimTECH/Shared/Components/ScreenshotIconButton.razor
+++ b/SimTECH/SimTECH/Shared/Components/ScreenshotIconButton.razor
@@ -1,6 +1,6 @@
 ﻿@inject IJSRuntime JS
 
-<MudTooltip Text="Take a screenshot" Placement="Placement.Top" Color="Color.Tertiary">
+<MudTooltip Text="Take a screenshot" Placement="Placement.Top" Color="@Colour">
     <MudIconButton Variant="Variant.Text"
                    Icon="@Icons.Material.Filled.Image"
                    Color="@Colour"
