--- a/SimTECH/SimTECH/Pages/Seasons/Dialogs/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Dialogs/SeasonEditor.razor
@@ -9,7 +9,20 @@
                     <div>
                         <MudText Typo="Typo.subtitle1">Information</MudText>
                         <MudDivider />
-                        <MudNumericField T="int" @bind-Value="Model.Year" Label="Year" Class="field-sm" />
+                        <div class="d-flex flex-row align-items-center justify-space-between">
+                            <MudNumericField T="int" @bind-Value="Model.Year" Label="Year" Class="field-sm" />
+
+                            @if (Model.Id == 0)
+                            {
+                                <MudSelect T="long" @bind-Value="Model.LeagueId" Label="League">
+                                    @foreach (var select in Leagues)
+                                    {
+                                        <MudSelectItem Value="select.Id">@select.Name</MudSelectItem>
+                                    }
+                                </MudSelect>
+                            }
+                        </div>
+                        
                     </div>
                     <div>
                         <MudText Typo="Typo.subtitle1">Session setup</MudText>
@@ -68,30 +81,6 @@
                         <MudNumericField T="int" @bind-Value="Model.MaximumDriversInRace" Label="MAX drivers in race" Class="field-sm" />
                         <MudNumericField T="int" @bind-Value="Model.GridBonus" Label="Bonus per grid POS" Class="field-sm" />
                     </div>
-                    @* <div>
-                        <MudText Typo="Typo.subtitle1">Bonus points</MudText>
-                        <MudDivider />
-
-                        <MudStack Row="true" Spacing="1">
-                            <MudNumericField T="int" @bind-Value="Model.PointsPole" Label="Pole position" Class="field-sm" />
-                            <MudNumericField T="int" @bind-Value="Model.PointsFastestLap" Label="Fastest lap" Class="field-sm" />
-                        </MudStack>
-                    </div> *@
-
-                    @if (Model.Id == 0)
-                    {
-                        <div>
-                            <MudText Typo="Typo.subtitle1">Select a league for this season</MudText>
-                            <MudDivider />
-
-                            <MudSelect T="long" @bind-Value="Model.LeagueId" Label="League">
-                                @foreach (var select in Leagues)
-                                {
-                                    <MudSelectItem Value="select.Id">@select.Name</MudSelectItem>
-                                }
-                            </MudSelect>
-                        </div>
-                    }
                 </MudStack>
             </MudPaper>
 
